force-app/main/default/objects/Commission__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commissions (Account)</relationshipLabel>
    <relationshipName>Commission</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>