force-app/main/default/objects/Commission__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <formula>Trade__r.Gross_Profit__c * (Commission_Pecentage_External_Partner_1__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Amount (External Partner)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>