force-app/main/default/objects/Commission__c/fields/Commission_Pecentage_External_Partner_3__c.field-meta.xml
<CustomField>
    <fullName>Commission_Pecentage_External_Partner_3__c</fullName>
    <label>Commission Pecentage(External Partner 3)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>