force-app/main/default/objects/Commission__c/fields/Commission_Pecentage_Internal_Partner_1__c.field-meta.xml
<CustomField>
    <fullName>Commission_Pecentage_Internal_Partner_1__c</fullName>
    <label>Commission Pecentage(Internal Partner 1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>