force-app/main/default/objects/Commission__c/fields/External_Partner_1_Broker__c.field-meta.xml
<CustomField>
    <fullName>External_Partner_1_Broker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>External Partner 1 (Broker)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commissions (Broker)</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>