force-app/main/default/objects/Commission__c/fields/External_Partner_3_Broker__c.field-meta.xml
<CustomField>
    <fullName>External_Partner_3_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Partner 3 (Broker)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commissions (External Partner 3 (Broker))</relationshipLabel>
    <relationshipName>ExternalPartner3</relationshipName>
    <type>Lookup</type>
</CustomField>