force-app/main/default/objects/Commission__c/fields/Internal_Partner_1__c.field-meta.xml
<CustomField>
    <fullName>Internal_Partner_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Partner 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>