force-app/main/default/objects/Commission__c/fields/Internal_Partner_2__c.field-meta.xml
<CustomField>
    <fullName>Internal_Partner_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Partner 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commissions1</relationshipName>
    <type>Lookup</type>
</CustomField>