force-app/main/default/objects/Commission__c/fields/Internal_Partner_3__c.field-meta.xml
<CustomField>
    <fullName>Internal_Partner_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Partner 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InternalPartner3</relationshipName>
    <type>Lookup</type>
</CustomField>