force-app/main/default/objects/Commission__c/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Trade</label>
    <referenceTo>Trade__c</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>