force-app/main/default/objects/Commission__c/validationRules/Only_System_Admin_as_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_System_Admin_as_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
     $Profile.Name  = &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>This can not be changed by a non Admin</errorMessage>
</ValidationRule>